# Vibecode-with-Multi-Agent-LongCoT

./: .env.example  .gitignore  AB_TEST_GENERIC_AI_ANALYSIS.md  CCS_STRATEGY.md  CHANGELOG.md  Dockerfile  INVESTOR_PITCH.md  MANIFEST.in  README.md  SYSTEM_HANDOVER.md  VIBECODE_TRANSFORMATION_ANALYSIS.md  agent_response.md  analyze_generic_ai.py  audit_report.md  cleanup_for_github.ps1  debug_models.py  demo_longcot.py  demo_masterpiece.py  direct_test.py  docker-compose.yml  implementation_plan.md  install.ps1  install.sh  investor_demo.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  quick_test.ps1  requirements.txt  run.ps1  run.sh  run_ab_test.ps1  setup.py  setup_test.ps1  ship_it.ps1  simple_test.py  tailwind.config.ts  test-todo-app_build_log.txt  test_autonomous_dev.py  (+5 more)
#_mission/: implementation_plan.md
.github/workflows/: test.yml
.vibecode/: api.key  audit_report.md  project_context.md  scan_report.json  session_context.md  state.json
.vibecode/artifacts/: .gitkeep
.vibecode/longcot/: .gitkeep  scan_20260103_110754.json  scan_20260103_110754.md  scan_20260103_110902.json  scan_20260103_110902.md  scan_20260103_111531.json  scan_20260103_111531.md  scan_20260103_111709.json  scan_20260103_111709.md  scan_20260103_111956.json  scan_20260103_111956.md  scan_20260103_112007.json  scan_20260103_112007.md  scan_20260103_112026.json  scan_20260103_112026.md  scan_20260103_112104.json  scan_20260103_112104.md  scan_20260103_130301.json  scan_20260103_130301.md  scan_20260103_131636.json  scan_20260103_131636.md  scan_20260103_132116.json  scan_20260103_132116.md  scan_20260103_132851.json  scan_20260103_132851.md  scan_20260103_133015.json  scan_20260103_133015.md  scan_20260103_133049.json  scan_20260103_133049.md  scan_20260103_133130.json  scan_20260103_133130.md  scan_20260103_133203.json  scan_20260103_133203.md  scan_20260103_133803.json  scan_20260103_133803.md  scan_20260103_133835.json  scan_20260103_133835.md  scan_20260103_134404.json  scan_20260103_134404.md  scan_20260103_134557.json  (+57 more)
Project aether v2/docs/: vibecode_plan.md
__mission/: README.md
__mission/backend/: main.py
__mission/frontend/: index.html  package-lock.json  package.json  (+1 more)
agents/: 00_auditor.md  01_planner.md  02_coder.md  03_ui_premium.md  04_reviewer.md  05_apply.md  06_runtime.md  07_autofix.md  08_export.md  09_testing.md  __init__.py  agent_base.py  shortcuts.md
app/: globals.css
core/: agent_executor.py  agent_registry.py  artifact_registry.py  async_io.py  autonomy_config.py  cache.py  context_compaction.py  diagnostician.py  intent_parser.py  longcot_scanner.py  memory_manager.py  message_queue.py  messages.py  metrics.py  orchestrator.py  reasoning_engine.py  scanner.py  skill_loader.py  system_fast.md  tool_registry.py  universal_generator.py
docs/: AGENT_REFERENCE.md  AUTONOMOUS_MODE.md  AUTONOMOUS_TESTING_GUIDE.md  BUGFIXES_2026_01_05.md  CONSISTENT_PLANNING_ARCHITECTURE.md  ORCHESTRATOR_INTEGRATION.md  PLANNING_ARCHITECTURE_VISUAL.md  PLANNING_FIX_QUICK_REFERENCE.md  PLANNING_INTEGRATION.md  PRODUCT_ARCHITECTURE.md  QUICK_START.md  ROUTING_EXPLAINED.md  SKILLS_AB_TEST_RESULTS.md  SKILLS_QUICK_REFERENCE.md  SKILLS_ROI_VISUAL_SUMMARY.md  SKILL_INTEGRATION_COMPLETE.md  TOOL_REFERENCE.md  vibecode_plan.md
e2e/: ai-sidebar.spec.ts  collaborative-cursors.spec.ts  dashboard.spec.ts  realtime-sales.spec.ts
lib/: utils.ts
meta/: agent_reasoning_log.md  dependency_graph.md  error_refraction_report.md  tool_call_trace.json
prisma/: seed.ts
project-aether-v2/: package.json
sabotage_project/: app.py  app.py.bak
test/: package-lock.json  package.json
tests/: conftest.py
utils/: ai_providers.py
(+57 files in other folders)
