[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "vibecode-studio"
version = "1.0.0"
description = "Multi-Agent AI Development System with Premium Skills"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Vibecode Team", email = "k.nguyen@griffith.edu.au"}
]
keywords = ["ai", "development", "multi-agent", "code-generation", "skills", "automation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/khoi1009/Vibecode-with-Multi-Agent"
Documentation = "https://github.com/khoi1009/Vibecode-with-Multi-Agent#readme"
Repository = "https://github.com/khoi1009/Vibecode-with-Multi-Agent"
Issues = "https://github.com/khoi1009/Vibecode-with-Multi-Agent/issues"

[project.scripts]
vibecode = "vibecode_studio:main"
vibe = "vibecode_studio:main"

[tool.setuptools]
packages = ["core", "agents"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json", "*.yaml", "*.yml"]
"skills" = ["**/*"]
